--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "form-data": "^4.0.0"
   }
